api working except creat
